# sleyva_os

./: Cargo.toml  Makefile
.cargo/: config.toml
src/: cpu_info.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  memory_mapping.rs  page_fault.rs  should_panic.rs  stack_overflow.rs
