[package]
name = "sleyva_os"
version = "0.1.0"
authors = ["sleyva"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x86_64 = "0.12"
rlibc = "1.0.0"
spin = "0.7.0"
bootloader = "0.9.11"
volatile = "0.2.6"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]