[package]
name = "sleyva_os"
version = "0.1.0"
authors = ["sleyva"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uart_16550 = "0.2.10"
x86_64 = "0.12"
rlibc = "1.0.0"
spin = "0.7.0"
bootloader = "0.9.11"
volatile = "0.2.6"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"

[package.metadata.bootimage]
test-args = [
    "-device", 
    "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "--display", "none"]
test-success-exit-code = 33
test-timeout = 300

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "page_fault"
harness = false