[package]
name = "sleyva_os"
version = "0.1.0"
authors = ["sleyva"]
edition = "2018"

[features]
default = ["map_physical_memory"]
map_physical_memory = []
recursive_mapped_memory = []



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlibc = "1.0.0"
bootloader = { version = "0.9.8", features = ["map_physical_memory", "recursive_page_table"] }
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[package.metadata.bootimage]
test-args = [
    "-device", 
    "isa-debug-exit,iobase=0xf4,iosize=0x04", 
    "-serial", "stdio",
    "--display", "none"]
test-success-exit-code = 33
test-timeout = 300

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]


[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[[test]]
name = "page_fault"
harness = false